src/LangGrammarParser.py
# Generated from LangGrammar.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class LangGrammarParser ( Parser ):

    grammarFileName = "LangGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "','", "'{'", "'}'", "'if'", 
                     "'else'", "';'", "'='", "'++'", "'--'", "'return'", 
                     "'while'", "'do'", "'for'", "'||'", "'&&'", "'^'", 
                     "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "'!'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "DATA_TYPE", 
                      "BOOL", "ID", "DOUBLE", "INT", "STRING", "WS", "MULTI_COMMENT", 
                      "SINGLE_COMMENT" ]

    RULE_prog = 0
    RULE_func_list = 1
    RULE_func_def = 2
    RULE_param_list = 3
    RULE_param = 4
    RULE_code_block = 5
    RULE_stmt_list = 6
    RULE_stmt = 7
    RULE_decide_with_else = 8
    RULE_decide_no_else = 9
    RULE_loop_stmt = 10
    RULE_init_stmt = 11
    RULE_post_stmt = 12
    RULE_var_list = 13
    RULE_var = 14
    RULE_expr = 15
    RULE_disjnc = 16
    RULE_conjnc = 17
    RULE_xor = 18
    RULE_comp = 19
    RULE_rel = 20
    RULE_add = 21
    RULE_mul = 22
    RULE_unary = 23
    RULE_term = 24
    RULE_args = 25
    RULE_number = 26

    ruleNames =  [ "prog", "func_list", "func_def", "param_list", "param", 
                   "code_block", "stmt_list", "stmt", "decide_with_else", 
                   "decide_no_else", "loop_stmt", "init_stmt", "post_stmt", 
                   "var_list", "var", "expr", "disjnc", "conjnc", "xor", 
                   "comp", "rel", "add", "mul", "unary", "term", "args", 
                   "number" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    DATA_TYPE=31
    BOOL=32
    ID=33
    DOUBLE=34
    INT=35
    STRING=36
    WS=37
    MULTI_COMMENT=38
    SINGLE_COMMENT=39

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func_list(self):
            return self.getTypedRuleContext(LangGrammarParser.Func_listContext,0)


        def getRuleIndex(self):
            return LangGrammarParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = LangGrammarParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.func_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func_def(self):
            return self.getTypedRuleContext(LangGrammarParser.Func_defContext,0)


        def func_list(self):
            return self.getTypedRuleContext(LangGrammarParser.Func_listContext,0)


        def getRuleIndex(self):
            return LangGrammarParser.RULE_func_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_list" ):
                listener.enterFunc_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_list" ):
                listener.exitFunc_list(self)




    def func_list(self):

        localctx = LangGrammarParser.Func_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_func_list)
        try:
            self.state = 60
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 56
                self.func_def()
                self.state = 57
                self.func_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 59
                self.func_def()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_defContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DATA_TYPE(self):
            return self.getToken(LangGrammarParser.DATA_TYPE, 0)

        def ID(self):
            return self.getToken(LangGrammarParser.ID, 0)

        def param_list(self):
            return self.getTypedRuleContext(LangGrammarParser.Param_listContext,0)


        def code_block(self):
            return self.getTypedRuleContext(LangGrammarParser.Code_blockContext,0)


        def getRuleIndex(self):
            return LangGrammarParser.RULE_func_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_def" ):
                listener.enterFunc_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_def" ):
                listener.exitFunc_def(self)




    def func_def(self):

        localctx = LangGrammarParser.Func_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_func_def)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(LangGrammarParser.DATA_TYPE)
            self.state = 63
            self.match(LangGrammarParser.ID)
            self.state = 64
            self.match(LangGrammarParser.T__0)
            self.state = 65
            self.param_list()
            self.state = 66
            self.match(LangGrammarParser.T__1)
            self.state = 67
            self.code_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self):
            return self.getTypedRuleContext(LangGrammarParser.ParamContext,0)


        def param_list(self):
            return self.getTypedRuleContext(LangGrammarParser.Param_listContext,0)


        def getRuleIndex(self):
            return LangGrammarParser.RULE_param_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam_list" ):
                listener.enterParam_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam_list" ):
                listener.exitParam_list(self)




    def param_list(self):

        localctx = LangGrammarParser.Param_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_param_list)
        try:
            self.state = 75
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 69
                self.param()
                self.state = 70
                self.match(LangGrammarParser.T__2)
                self.state = 71
                self.param_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 73
                self.param()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DATA_TYPE(self):
            return self.getToken(LangGrammarParser.DATA_TYPE, 0)

        def ID(self):
            return self.getToken(LangGrammarParser.ID, 0)

        def getRuleIndex(self):
            return LangGrammarParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)




    def param(self):

        localctx = LangGrammarParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(LangGrammarParser.DATA_TYPE)
            self.state = 78
            self.match(LangGrammarParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Code_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt_list(self):
            return self.getTypedRuleContext(LangGrammarParser.Stmt_listContext,0)


        def getRuleIndex(self):
            return LangGrammarParser.RULE_code_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCode_block" ):
                listener.enterCode_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCode_block" ):
                listener.exitCode_block(self)




    def code_block(self):

        localctx = LangGrammarParser.Code_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_code_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(LangGrammarParser.T__3)
            self.state = 81
            self.stmt_list()
            self.state = 82
            self.match(LangGrammarParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Stmt_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self):
            return self.getTypedRuleContext(LangGrammarParser.StmtContext,0)


        def stmt_list(self):
            return self.getTypedRuleContext(LangGrammarParser.Stmt_listContext,0)


        def getRuleIndex(self):
            return LangGrammarParser.RULE_stmt_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt_list" ):
                listener.enterStmt_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt_list" ):
                listener.exitStmt_list(self)




    def stmt_list(self):

        localctx = LangGrammarParser.Stmt_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_stmt_list)
        try:
            self.state = 88
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 4, 6, 8, 12, 13, 14, 15, 26, 30, 31, 32, 33, 34, 35, 36]:
                self.enterOuterAlt(localctx, 1)
                self.state = 84
                self.stmt()
                self.state = 85
                self.stmt_list()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decide_with_else(self):
            return self.getTypedRuleContext(LangGrammarParser.Decide_with_elseContext,0)


        def decide_no_else(self):
            return self.getTypedRuleContext(LangGrammarParser.Decide_no_elseContext,0)


        def getRuleIndex(self):
            return LangGrammarParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)




    def stmt(self):

        localctx = LangGrammarParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_stmt)
        try:
            self.state = 92
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 90
                self.decide_with_else()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 91
                self.decide_no_else()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Decide_with_elseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(LangGrammarParser.ExprContext,0)


        def decide_with_else(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LangGrammarParser.Decide_with_elseContext)
            else:
                return self.getTypedRuleContext(LangGrammarParser.Decide_with_elseContext,i)


        def code_block(self):
            return self.getTypedRuleContext(LangGrammarParser.Code_blockContext,0)


        def DATA_TYPE(self):
            return self.getToken(LangGrammarParser.DATA_TYPE, 0)

        def var_list(self):
            return self.getTypedRuleContext(LangGrammarParser.Var_listContext,0)


        def ID(self):
            return self.getToken(LangGrammarParser.ID, 0)

        def loop_stmt(self):
            return self.getTypedRuleContext(LangGrammarParser.Loop_stmtContext,0)


        def getRuleIndex(self):
            return LangGrammarParser.RULE_decide_with_else

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecide_with_else" ):
                listener.enterDecide_with_else(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecide_with_else" ):
                listener.exitDecide_with_else(self)




    def decide_with_else(self):

        localctx = LangGrammarParser.Decide_with_elseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_decide_with_else)
        try:
            self.state = 129
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 94
                self.match(LangGrammarParser.T__5)
                self.state = 95
                self.match(LangGrammarParser.T__0)
                self.state = 96
                self.expr()
                self.state = 97
                self.match(LangGrammarParser.T__1)
                self.state = 98
                self.decide_with_else()
                self.state = 99
                self.match(LangGrammarParser.T__6)
                self.state = 100
                self.decide_with_else()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 102
                self.match(LangGrammarParser.T__7)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 103
                self.code_block()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 104
                self.match(LangGrammarParser.DATA_TYPE)
                self.state = 105
                self.var_list(0)
                self.state = 106
                self.match(LangGrammarParser.T__7)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 108
                self.match(LangGrammarParser.ID)
                self.state = 109
                self.match(LangGrammarParser.T__8)
                self.state = 110
                self.expr()
                self.state = 111
                self.match(LangGrammarParser.T__7)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 113
                self.match(LangGrammarParser.ID)
                self.state = 114
                self.match(LangGrammarParser.T__9)
                self.state = 115
                self.match(LangGrammarParser.T__7)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 116
                self.match(LangGrammarParser.ID)
                self.state = 117
                self.match(LangGrammarParser.T__10)
                self.state = 118
                self.match(LangGrammarParser.T__7)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 119
                self.match(LangGrammarParser.T__11)
                self.state = 120
                self.match(LangGrammarParser.T__7)
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 121
                self.match(LangGrammarParser.T__11)
                self.state = 122
                self.expr()
                self.state = 123
                self.match(LangGrammarParser.T__7)
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 125
                self.loop_stmt()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 126
                self.expr()
                self.state = 127
                self.match(LangGrammarParser.T__7)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Decide_no_elseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(LangGrammarParser.ExprContext,0)


        def stmt(self):
            return self.getTypedRuleContext(LangGrammarParser.StmtContext,0)


        def decide_with_else(self):
            return self.getTypedRuleContext(LangGrammarParser.Decide_with_elseContext,0)


        def decide_no_else(self):
            return self.getTypedRuleContext(LangGrammarParser.Decide_no_elseContext,0)


        def getRuleIndex(self):
            return LangGrammarParser.RULE_decide_no_else

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecide_no_else" ):
                listener.enterDecide_no_else(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecide_no_else" ):
                listener.exitDecide_no_else(self)




    def decide_no_else(self):

        localctx = LangGrammarParser.Decide_no_elseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_decide_no_else)
        try:
            self.state = 145
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 131
                self.match(LangGrammarParser.T__5)
                self.state = 132
                self.match(LangGrammarParser.T__0)
                self.state = 133
                self.expr()
                self.state = 134
                self.match(LangGrammarParser.T__1)
                self.state = 135
                self.stmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 137
                self.match(LangGrammarParser.T__5)
                self.state = 138
                self.match(LangGrammarParser.T__0)
                self.state = 139
                self.expr()
                self.state = 140
                self.match(LangGrammarParser.T__1)
                self.state = 141
                self.decide_with_else()
                self.state = 142
                self.match(LangGrammarParser.T__6)
                self.state = 143
                self.decide_no_else()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Loop_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(LangGrammarParser.ExprContext,0)


        def stmt(self):
            return self.getTypedRuleContext(LangGrammarParser.StmtContext,0)


        def init_stmt(self):
            return self.getTypedRuleContext(LangGrammarParser.Init_stmtContext,0)


        def post_stmt(self):
            return self.getTypedRuleContext(LangGrammarParser.Post_stmtContext,0)


        def getRuleIndex(self):
            return LangGrammarParser.RULE_loop_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoop_stmt" ):
                listener.enterLoop_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoop_stmt" ):
                listener.exitLoop_stmt(self)




    def loop_stmt(self):

        localctx = LangGrammarParser.Loop_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_loop_stmt)
        try:
            self.state = 171
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13]:
                self.enterOuterAlt(localctx, 1)
                self.state = 147
                self.match(LangGrammarParser.T__12)
                self.state = 148
                self.match(LangGrammarParser.T__0)
                self.state = 149
                self.expr()
                self.state = 150
                self.match(LangGrammarParser.T__1)
                self.state = 151
                self.stmt()
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 2)
                self.state = 153
                self.match(LangGrammarParser.T__13)
                self.state = 154
                self.stmt()
                self.state = 155
                self.match(LangGrammarParser.T__12)
                self.state = 156
                self.match(LangGrammarParser.T__0)
                self.state = 157
                self.expr()
                self.state = 158
                self.match(LangGrammarParser.T__1)
                self.state = 159
                self.match(LangGrammarParser.T__7)
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 3)
                self.state = 161
                self.match(LangGrammarParser.T__14)
                self.state = 162
                self.match(LangGrammarParser.T__0)
                self.state = 163
                self.init_stmt()
                self.state = 164
                self.match(LangGrammarParser.T__7)
                self.state = 165
                self.expr()
                self.state = 166
                self.match(LangGrammarParser.T__7)
                self.state = 167
                self.post_stmt()
                self.state = 168
                self.match(LangGrammarParser.T__1)
                self.state = 169
                self.stmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Init_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DATA_TYPE(self):
            return self.getToken(LangGrammarParser.DATA_TYPE, 0)

        def ID(self):
            return self.getToken(LangGrammarParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(LangGrammarParser.ExprContext,0)


        def getRuleIndex(self):
            return LangGrammarParser.RULE_init_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInit_stmt" ):
                listener.enterInit_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInit_stmt" ):
                listener.exitInit_stmt(self)




    def init_stmt(self):

        localctx = LangGrammarParser.Init_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_init_stmt)
        try:
            self.state = 181
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [31]:
                self.enterOuterAlt(localctx, 1)
                self.state = 173
                self.match(LangGrammarParser.DATA_TYPE)
                self.state = 174
                self.match(LangGrammarParser.ID)
                self.state = 175
                self.match(LangGrammarParser.T__8)
                self.state = 176
                self.expr()
                pass
            elif token in [33]:
                self.enterOuterAlt(localctx, 2)
                self.state = 177
                self.match(LangGrammarParser.ID)
                self.state = 178
                self.match(LangGrammarParser.T__8)
                self.state = 179
                self.expr()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 3)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Post_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(LangGrammarParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(LangGrammarParser.ExprContext,0)


        def getRuleIndex(self):
            return LangGrammarParser.RULE_post_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPost_stmt" ):
                listener.enterPost_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPost_stmt" ):
                listener.exitPost_stmt(self)




    def post_stmt(self):

        localctx = LangGrammarParser.Post_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_post_stmt)
        try:
            self.state = 191
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 183
                self.match(LangGrammarParser.ID)
                self.state = 184
                self.match(LangGrammarParser.T__8)
                self.state = 185
                self.expr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 186
                self.match(LangGrammarParser.ID)
                self.state = 187
                self.match(LangGrammarParser.T__9)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 188
                self.match(LangGrammarParser.ID)
                self.state = 189
                self.match(LangGrammarParser.T__10)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self):
            return self.getTypedRuleContext(LangGrammarParser.VarContext,0)


        def var_list(self):
            return self.getTypedRuleContext(LangGrammarParser.Var_listContext,0)


        def getRuleIndex(self):
            return LangGrammarParser.RULE_var_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_list" ):
                listener.enterVar_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_list" ):
                listener.exitVar_list(self)



    def var_list(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = LangGrammarParser.Var_listContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 26
        self.enterRecursionRule(localctx, 26, self.RULE_var_list, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 194
            self.var()
            self._ctx.stop = self._input.LT(-1)
            self.state = 201
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = LangGrammarParser.Var_listContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_var_list)
                    self.state = 196
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 197
                    self.match(LangGrammarParser.T__2)
                    self.state = 198
                    self.var() 
                self.state = 203
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class VarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(LangGrammarParser.ID, 0)
